--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+This demo app requires that you have
+* a recent version of ruby
+* a recent version of rails 4.2+
+* postgres installed
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+To get started, follow these steps
+* git clone this repo locally
+* rake db:create
+* rake db:migrate
+* rake users
+* rake campaigns
+* rake pledges
+
+All set!
